# scrapy-project

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  scrapy.cfg
scratch/: test_url_utils.py
src/orchestrator/: definitions.py  partitions.py  resources.py
src/orchestrator/assets/: __init__.py  config.py  landing_zone.py  processed_zone.py
src/pipeline/domain/: __init__.py  models.py  settings.py
src/pipeline/infrastructure/: logger.py  mongo_repository.py  s3_repository.py
src/pipeline/services/: html_cleaner.py  ingestion_service.py  transformation_service.py  utils.py
src/workplace_relations/: items.py  middlewares.py  pipelines.py  settings.py
src/workplace_relations/spiders/: workplace_relations_spider.py
tests/: test_partitioning.py  test_transformation.py
workplace_relations_pipeline/: middlewares.py  pipelines.py  settings.py
workplace_relations_pipeline/config/: models.py  settings.py
workplace_relations_pipeline/logging_utils/: json_logger.py
workplace_relations_pipeline/pipeline/: cli.py  dagster_defs.py  ingestion.py  partitioning.py  transformation.py
workplace_relations_pipeline/services/: cli.py  dagster_defs.py  ingestion.py  transformation.py  utils.py
workplace_relations_pipeline/spiders/: workplace_relations_spider.py
workplace_relations_pipeline/storage/: mongo_client.py  object_store.py
workplace_relations_pipeline/tests/: test_dagster.py  test_html_cleaner.py  test_models.py  test_partitioning.py  test_utils.py
workplace_relations_pipeline/transform/: html_cleaner.py
