[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workplace-relations-pipeline"
version = "0.1.0"
description = "Workplace Relations scraping and transformation pipeline"
readme = "docs/README.md"
requires-python = ">=3.9"
dependencies = [
  "scrapy>=2.11.0",
  "dagster>=1.8.0",
  "dagster-webserver>=1.8.0",
  "pymongo>=4.8.0",
  "boto3>=1.35.0",
  "beautifulsoup4>=4.12.0",
  "python-dotenv>=1.0.1",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
run_ingestion = "workplace_relations_pipeline.services.cli:run_ingestion"
run_transform = "workplace_relations_pipeline.services.cli:run_transform"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["workplace_relations_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["workplace_relations_pipeline/tests"]
python_files = ["test_*.py"]
