[project]
name = "workplace-relations-pipeline"
version = "0.1.0"
description = "Modern Workplace Relations scraping and transformation pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "scrapy>=2.11.0",
  "dagster>=1.8.0",
  "dagster-webserver>=1.8.0",
  "pymongo>=4.8.0",
  "boto3>=1.35.0",
  "beautifulsoup4>=4.12.0",
  "python-dotenv>=1.0.1",
  "tenacity>=9.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.9"
files = ["src"]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
